# FTE_Employee_Lean

./: .gitignore  AUDIT_LOGGING_COMPLETE.md  CLIENT_INTRODUCTION.md  ERROR_RECOVERY_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ODOO_INTEGRATION_COMPLETE.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  RALPH_WIGGUM_LOOP.md  README.md  SERVICE_SETUP_README.md  SETUP.md  SKILLS.md  SOCIAL_MEDIA_SUMMARIES.md  SYSTEM_DESIGN.md  SYSTEM_DESIGN_ACCURATE.md  ecosystem.config.js  error_recovery_and_graceful_degradation_plan.md  platinum_tasks.md  pm2.md  pyproject.toml  test_odoo_integration.py
.zed/: settings.json
cloud/: certbot-init.sh  docker-compose.yml  ecosystem.cloud.config.js  healthcheck.py  odoo.conf
cloud/nginx/: nginx.conf
config/: email.json  mcp_config.json  vault_config.json  watcher_config.json
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Header.tsx  Sidebar.tsx
frontend/lib/: mock-data.ts  types.ts
odoo-local/: CREDENTIALS_EXPLAINED.md  ODOO_SETUP.md  docker-compose.yml  install_accounting.sh
scripts/: check_filesystem_watcher.sh  platinum_demo.py  start_filesystem_watcher.sh  start_reasoning_loop.sh  stop_filesystem_watcher.sh
scripts/cloud/: azure_vm_setup.sh  local_vault_sync.sh  odoo_backup.sh  vault_github_setup.sh  vault_sync.sh
src/agents/: __init__.py  cloud_agent.py  execution_agent.py  local_approval_agent.py  reasoning_agent.py
src/core/: __init__.py  dead_letter_queue.py  errors.py  (+5 more)
tests/: test_audit_logging.py  test_queue.py  test_retry.py
(+69 files in other folders)
