[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hackathon-zero"
version = "0.1.0"
description = "Personal AI Employee - Unified Bronze & Silver Tier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "watchdog>=6.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "selenium>=4.15.0",
    "google-api-python-client>=2.110.0",
    "google-auth-oauthlib>=1.1.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.1",
    "pyyaml>=6.0.0",
    "pillow>=12.1.0",
    "groq>=1.0.0", # FREE ultra-fast inference
    "slack-sdk>=3.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.hatch.build.targets.wheel]
packages = ["src/watcher", "src/watchers", "src/agents", "src/orchestrator", "src/mcp_servers"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
